Fix about mobile, caption gap

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -7,6 +7,7 @@
 
 @media (max-width: 600px) {
     .grid {
-        grid-template: 1fr / 1fr;
+        grid-template-columns: 100%;
+        row-gap: 1rem;
     }
 }
